--- a/package.json
+++ b/package.json
@@ -7,23 +7,26 @@
   "scripts": {
     "interface": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "serve": "nodemon src/server.js",
-    "dev": "concurrently --kill-others \"yarn run interface\" \"yarn run serve\""
+    "serve": "nodemon core/server.js",
+    "interfaceAndServe": "concurrently --kill-others \"yarn run interface\" \"yarn run serve\"",
+    "compile": "babel core -d compiled",
+    "dev": "yarn run compile && yarn run interfaceAndServe"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.2.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.1",
+    "mongoose": "^5.4.2",
     "popper.js": "^1.12.9",
     "vue": "^2.5.3",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^6.0.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
