--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "interface": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "serve": "nodemon core/server.js",
+    "serve": "nodemon compiled/server.js",
     "interfaceAndServe": "concurrently --kill-others \"yarn run interface\" \"yarn run serve\"",
     "compile": "babel core -d compiled",
     "dev": "yarn run compile && yarn run interfaceAndServe"
@@ -23,21 +23,24 @@
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^6.0.0",
+    "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.5",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
     "style-loader": "^0.19.0",
     "vue-loader": "^13.5.0",
     "vue-template-compiler": "^2.5.3",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^3.1.11"
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
